<resources>
    <string name="app_name">MotoOn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Do your login</string>
    <string name="loading">loading</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_login_btn_google">Google</string>
    <string name="notaBoaVindas">Welcome</string>
    <string name="naoAutorizado">Unauthenticated</string>
    <string name="activity_main_drawer_menu_meus_dados">My Data</string>
    <string name="activity_main_drawer_menu_minhas_solicitacoes">My Requests</string>
    <string name="activity_main_drawer_menu_trab_conosco">Drive with MotoOn</string>
    <string name="activity_main_drawer_menu_painel_chamado">Painel de Chamado</string>
    <string name="activity_main_drawer_menu_meus_atendimentos">My Atendimentos</string>

    <string name="activity_main_drawer_menu_sair">Close</string>
    <string name="menu_main_normal">Normal</string>
    <string name="menu_main_hibrido">hybrid</string>
    <string name="menu_main_satelite">satellite</string>
    <string name="menu_main_terreno">Terrain</string>
    <string name="menu_main_nenhum">None</string>
    <string name="main_activity_btn_chamar_moto">Call Motorcycle</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Adress found</string>
    <string name="main_activity_btn_pesq_endereco">Pesquisar endereco</string>
    <string name="activity_historico_textView_titulo">Historic of my solicitation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_data_solicitacao">Date:</string>
    <string name="txt_solicitante">Solicitante</string>
    <string name="txt_local_origem">Address: </string>
    <string name="txt_ponto_referencia">Ponto de Referência</string>
    <string name="txt_local_detino">Destino:</string>
    <string name="txt_informacao_adicional">Informação Adicional</string>
    <string name="txt_status">Status</string>
    <string name="txt_mototaxista">Mototaxista:</string>
    <string name="txt_data">Data:</string>
    <string name="txt_para">Para:</string>
    <string name="solicitacao_realizada_sucesso">Solicitação realizada com sucesso</string>
    <string name="status_aguardando_atendimento">Aguardando Atendimento</string>
    <string name="status_em_atendimento">Em Atendimento</string>
    <string name="status_corrida_iniciada">Corrida Iniciada</string>
    <string name="status_finalizado">Finalizado</string>
    <string name="status_cancelado">Cancelado</string>
    <string name="status_desconhecido">Desconhecido</string>
    <string name="activity_painel_chamado_textView_titulo">PAINEL DE CHAMADOS</string>
    <string name="activity_meus_dados_email">E-mail cadastrado</string>
    <string name="activity_meus_dados_apelido">Name User (*)</string>
    <string name="activity_meus_dados_meuID">My ID User</string>
    <string name="activity_meus_dados_celular">Celular (DDD+9+Núm.) - (*)</string>
    <string name="activity_meus_dados_sexo">Sexo (*)</string>
    <string name="activity_meus_dados_cpf">CPF</string>
    <string name="activity_meus_dados_data_nasc">Data de Nascimento</string>
    <string name="activity_meus_dados_cnh">CNH</string>
    <string name="activity_meus_dados_cnh_validade">Validade da CNH</string>
    <string name="activity_meus_dados_crlv">Num. CRLV</string>
    <string name="activity_meus_dados_placa_moto">Placa da Moto</string>
    <string name="activity_main_drawer_menu_enviar_documentos">Enviar Documentos</string>

    <string-array name="activity_meus_dados_sexo">
        <item>Não Informado</item>
        <item>Man</item>
        <item>Woman</item>
    </string-array>

    <string-array name="activity_meus_dados_tipo_veiculo">
        <item>MOTO</item>
        <item>TUK TUK</item>
    </string-array>


    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <!-- <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>


</resources>
