<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_normal"
        android:orderInCategory="100"
        android:title="@string/menu_main_normal"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_main_hibrido"
        android:orderInCategory="101"
        android:title="@string/menu_main_hibrido"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_main_satelite"
        android:orderInCategory="101"
        android:title="@string/menu_main_satelite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_main_terreno"
        android:orderInCategory="101"
        android:title="@string/menu_main_terreno"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_main_nenhum"
        android:orderInCategory="101"
        android:title="@string/menu_main_nenhum"
        app:showAsAction="never"/>

</menu>
