<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:text="Cancelar"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:id="@+id/item_lst_solicitacao_btnCancelar"
            android:layout_alignParentTop="true"
            android:textSize="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/txt_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_dataSolic"/>

        <TextView
            tools:text="31/12/2016"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lst_solicitacao_dataSolicitacao"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/label_dataSolic"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLines="1"/>

        <TextView
            android:text="@string/txt_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_Solicitante"
            android:layout_below="@+id/label_dataSolic"/>

        <TextView
            tools:text="Franklin Cardoso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lst_solicitacao_solicitante"
            android:layout_toRightOf="@+id/label_Solicitante"
            android:layout_below="@+id/item_lst_solicitacao_dataSolicitacao"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLines="1"/>

        <TextView
            android:text="@string/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_Status"
            android:layout_below="@+id/label_Solicitante" />

        <TextView
            tools:text="Aguardando atendimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_lst_solicitacao_status"
            android:layout_toRightOf="@+id/label_Status"
            android:layout_below="@+id/item_lst_solicitacao_solicitante"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLines="1"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>